Fix overlapping problem with FullSizeCTA section

--- a/src/staff_augmentation/components/FullSizeCTA/styles.module.scss
+++ b/src/staff_augmentation/components/FullSizeCTA/styles.module.scss
@@ -4,18 +4,15 @@
 .getInTouch {
   position: relative;
   overflow: hidden;
-  min-height: 56vw;
   text-align: center;
   padding-top: 0;
   padding-bottom: 0;
-  margin-top: -380px;
 }
 
 .sectionContent {
   margin-top: auto;
   display: flex;
   width: 100%;
-  height: 868px;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
